[tool.poetry]
name = "repl_python3_weatherOnMars"
version = "0.1.0"
description = ""
authors = ["RyanHuang9 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.4.0"
Flask = "^2.0.2"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
